Model interfaces created for backend

--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,4 @@ DATABASE_URL="mysql://u879347084_gimobile_user:f64wW9012.@srv1193.hstgr.io:3306/
 DATABASE="u879347084_"
 USER="u879347084_gimobile_user"
 PASSWORD="6e*|vfB["
+PORT=5001
