--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,4 @@ DATABASE="u879347084_"
 USER="u879347084_gimobile_user"
 PASSWORD="6e*|vfB["
 PORT=5001
+APP_SECRET="h)Z>2N3iYdBJKfRg_XP7#'-4{0#dHT57"
