--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,6 @@ USER="u879347084_gimobile_user"
 PASSWORD="6e*|vfB["
 PORT=5001
 APP_SECRET="h)Z>2N3iYdBJKfRg_XP7#'-4{0#dHT57"
+SENDER_EMAIl=dev.gestionintegral@gmail.com
+SENDER_EMAIL_PASSWORD=f64wW9012
+SENDGRID_KEY=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
