--- a/.env.dev
+++ b/.env.dev
@@ -6,4 +6,5 @@ PORT=5001
 APP_SECRET="h)Z>2N3iYdBJKfRg_XP7#'-4{0#dHT57"
 SENDER_EMAIl=dev.gestionintegral@gmail.com
 SENDER_EMAIL_PASSWORD=f64wW9012
-#SENDGRID_API_KEY=
+SENDGRID_API_KEY=
+EMAIL_SUPPORT=soporte@gestionintegral.co
