Changes for push notifications

--- a/.env.dev
+++ b/.env.dev
@@ -9,5 +9,6 @@ SENDER_EMAIL_PASSWORD=f64wW9012
 SENDGRID_API_KEY=
 EMAIL_SUPPORT=soporte@gestionintegral.co
 ONESIGNAL_APP_ID=fa9e7625-1f1a-412a-99d9-9aa2eeaa3daf
-ONESIGNAL_API_KEY=NTZjYmZlNDMtNTEzZS00ZWY5LTgxOGYtM2IyYTNjYzhmMzhk
+ONESIGNAL_API_KEY=
 ONESIGNAL_BASE_URL=https://api.onesignal.com/
+EXPO_ACCESS_TOKEN=
